fix: alert component broken layout (#4087)

--- a/framework/core/less/common/Alert.less
+++ b/framework/core/less/common/Alert.less
@@ -67,13 +67,17 @@
     display: none;
   }
 }
+.Alert-content {
+  flex-direction: column;
+}
 .Alert-title {
   margin-bottom: 8px;
   font-weight: bold;
-  display: flex;
   align-items: center;
   gap: 8px;
 }
-.Alert-container {
+.Alert-container,
+.Alert-content,
+.Alert-title {
   display: flex;
 }
